Small Refactoring.